fix: schedule time form item align WEB-1244

--- a/src/inspection/index.sass
+++ b/src/inspection/index.sass
@@ -112,7 +112,7 @@
                 .inspection-form-header-left
                     display: flex
                     align-items: center
-                    colunmn-gap: 20px
+                    column-gap: 20px
                 
                 .inspection-form-header-right
                     display: flex
